feat: Se corrigen ortografía.

--- a/Informe Contexto Económico.Rmd
+++ b/Informe Contexto Económico.Rmd
@@ -73,12 +73,12 @@ ggplot(Inflacion, aes(x = Fecha)) +
 
 En enero de 2022, el país experimentó una inflación interanual del 3.50%. A lo largo del año, este índice se mantuvo por encima del límite superior de la meta inflacionaria establecida por el Banco Central de Costa Rica (3%, ±1 p.p.), con la excepción del mes de enero. El valor más alto se registró en agosto, alcanzando un 12.13%, seguido de una desaceleración en los cuatro meses siguientes, donde en diciembre se registró una inflación interanual de 7.88%. La inflación importada fue la principal causa del aumento de esta variable, lo que provocó un alza en los precios de los alimentos y los derivados del petróleo. La situación geopolítica, particularmente la Guerra entre Rusia y Ucrania, contribuyó a estas presiones inflacionarias, aunque se observó un freno en ellas a partir del mes de agosto, coincidiendo con una disminución en el tipo de cambio.
 
-En el primer trimestre del 2023, la inflación general mantuvo la tendencia a la baja iniciada en septiembre del 2022. Luego de alcanzar una tasa de variación máxima en agosto del 2022, retrocedió de manera sostenida hasta ubicarse en marzo del 2023 en 4,4%. Según el Informe de Política Monetaria de abril del 2023, el comportamiento de la inflación en el primer trimestre del presente año es explicado en mayor medida por los precios de los bienes, cuyos aumentos interanuales se moderaron con respecto a los trimestres previos.
+En el primer trimestre del 2023, la inflación general mantuvo la tendencia a la baja iniciada en septiembre del 2022. Luego de alcanzar una tasa de variación máxima en agosto del 2022, retrocedió de manera sostenida hasta ubicarse en marzo del 2023 en 4.4%. Según el Informe de Política Monetaria de abril del 2023, el comportamiento de la inflación en el primer trimestre del presente año es explicado en mayor medida por los precios de los bienes, cuyos aumentos interanuales se moderaron con respecto a los trimestres previos.
 
-Durante el segundo trimestre del 2023 se acentuó la reducción de la inflación general, lo que llevó a que se ubicara por debajo del límite inferior del rango de tolerancia al final de este periodo. A finales de junio, la inflación general, se ubicó en -1,0%.
-Para el cuarto trimestre del 2023, al igual que en el previo, la inflación general interanual fue negativa (deflación. En diciembre del 2023, la inflación general se ubicó en -1,8%. Según el Informe de Política Monetaria de Enero del 2024, la reducción de la inflación, con valores negativos desde junio del 2023, ha estado determinada, en mayor medida, por la reversión de los choques de oferta externos y la política monetaria restrictiva.
+Durante el segundo trimestre del 2023 se acentuó la reducción de la inflación general, lo que llevó a que se ubicara por debajo del límite inferior del rango de tolerancia al final de este periodo. A finales de junio, la inflación general, se ubicó en -1.0%.
+Para el cuarto trimestre del 2023, al igual que en el previo, la inflación general interanual fue negativa (deflación. En diciembre del 2023, la inflación general se ubicó en -1.8%. Según el Informe de Política Monetaria de Enero del 2024, la reducción de la inflación, con valores negativos desde junio del 2023, ha estado determinada, en mayor medida, por la reversión de los choques de oferta externos y la política monetaria restrictiva.
 
-En cuanto a las expectativas para el año 2024, se espera un repunte gradual en la inflación en Costa Rica, aunque se mantendría dentro de los objetivos establecidos por el Banco Central. Este repunte se atribuye en gran medida al comportamiento de las materias primas importadas. Se proyecta que la inflación alcance alrededor del 1,9% (interanual) para ese año, marcando una salida del periodo de deflación en el que se encuentra actualmente. Sin embargo, el momento exacto en que se dará este cambio aún no está determinado. A pesar de este repunte, el país podría cerrar el año nuevamente fuera del rango objetivo del Banco Central, según proyecciones de la OCDE. Se espera que, para el año siguiente, 2025, la inflación regrese al rango objetivo, ubicándose en torno al 3,1%, reflejando una mejora en las condiciones económicas que podría generar presiones inflacionarias internas.
+En cuanto a las expectativas para el año 2024, se espera un repunte gradual en la inflación en Costa Rica, aunque se mantendría dentro de los objetivos establecidos por el Banco Central. Este repunte se atribuye en gran medida al comportamiento de las materias primas importadas. Se proyecta que la inflación alcance alrededor del 1.9% (interanual) para ese año, marcando una salida del periodo de deflación en el que se encuentra actualmente. Sin embargo, el momento exacto en que se dará este cambio aún no está determinado. A pesar de este repunte, el país podría cerrar el año nuevamente fuera del rango objetivo del Banco Central, según proyecciones de la OCDE. Se espera que, para el año siguiente, 2025, la inflación regrese al rango objetivo, ubicándose en torno al 3.1%, reflejando una mejora en las condiciones económicas que podría generar presiones inflacionarias internas.
 
 # Tasas de interés experimentadas y esperadas
 
@@ -94,7 +94,7 @@ TPM_experimentadas <- TPM_experimentadas %>% gather(Año, Tasa, "2022":"2023" )
 
 ## Tasas de interés experimentadas
 
-Se analiza el comportamiento de  la  tasa básica  pasiva (TBP) y la tasa de política monetaria (TPM) mensual del 2022 y del 2023 calculadas por el Banco Central de Costa Rica (BCCR). La primera corresponde a la tasa de interés del mercado. Las segunda, es la tasa objetivo del BCCR que se emplea como referencia para regular el costo de las operaciones crediticias y del sistema financiero. Es definida por la Junta Directiva del Banco Central. 
+Se analiza el comportamiento de  la  tasa básica  pasiva (TBP) y la tasa de política monetaria (TPM) mensual del 2022 y del 2023 calculadas por el Banco Central de Costa Rica (BCCR). La primera corresponde a la tasa de interés del mercado. La segunda, es la tasa objetivo del BCCR que se emplea como referencia para regular el costo de las operaciones crediticias y del sistema financiero. Es definida por la Junta Directiva del Banco Central. 
 
 En el siguiente gráfico se muestra el comportamiento de estas tasas.
 
@@ -122,21 +122,20 @@ Tasas_experimentadas_plot
 
 La tasa de política monetaria en el 2022 presentó un comportamiento al alza, iniciando con un 1.75%  y en los últimos tres meses del año las tasas fueron constantes, especificamente de 9%. Esto se debe a las presiones inflacionarias sufridas en el 2021 ,por lo que, con el fin de contrarrestar la tendencia al crecimiento de la inflación y alcanzar la neutralidad en la política monetaria, el BCCR realizó ocho ajustes al alza de la TPM durante ese año. Esto ocasionó incrementos en la tasa básica pasiva  donde, en los primeros 4 meses del 2022 dicha tasa experimentó un leve decrecimiento pero para el resto del año tuvo una gran subida, pasando de una tasa de 2.90% en abril a una de 6.35% en diciembre.
 
-Sin embargo, la decisión de elevar la TPM fue motivo de críticas hacia el BCCR debido al incremento de las tasas de interés que encarecieron las transacciones del mercado y el consumo nacional. Por lo tanto, a partir de marzo del 2023 el BCCR empezó a bajar la TPM. Según la Junta Directiva del BCCR, estas reducciones se basan en el comportamiento de la inflación y su evolución,  que para ese año presentó bajos niveles incluso mostró una inflación interanual negativa. Por lo cual, en el 2023 se mostró una tendencia a la baja, pasando de una tasa de 9% en los dos primeros meses del año a una de 6% al final de este. Como consecuencia, incidió en la baja de la TBP donde, se inició con una tasa de 6.52% en enero y cerró con una de 5.36% en diciembre.
+Sin embargo, la decisión de elevar la TPM fue motivo de críticas hacia el BCCR debido al incremento de las tasas de interés que encarecieron las transacciones del mercado y el consumo nacional. Por lo tanto, a partir de marzo del 2023, el BCCR empezó a bajar la TPM. Según la Junta Directiva del BCCR, estas reducciones se basan en el comportamiento de la inflación y su evolución,  que para ese año presentó bajos niveles incluso mostró una inflación interanual negativa. Por lo cual, en el 2023 se mostró una tendencia a la baja, pasando de una tasa de 9% en los dos primeros meses del año a una de 6% al final de este. Como consecuencia, incidió en la baja de la TBP donde, se inició con una tasa de 6.52% en enero y cerró con una de 5.36% en diciembre.
 
 En general, las tasas de política monetaria fueron superiores a las tasas básicas pasivas
 durante el 2022 y el 2023. Y, a pesar de que en el 2023 se comenzó con la reducción de ambas tasas, están fueron superiores a las presentados a inicios del 2022. Esto se debe a que el proceso de reducción ejecutado por la Junta Directiva del Banco Central fue más cauteloso.
 
 ## Tasas de interés esperadas
 
-Las expectativas sobre las tasas de interés se encuentran principalemente sujetas a las evoluciones previstas de la inflación. Dado que, se prevee que la inflación se siga manteniendo por debajo de la meta objetivo establecido por el BCCR (3%) se espera que para el 2024 el Banco Central mantenga una política monetaria menos restrictiva y por ende, realice ajustes sobre la TPM para que tienda a la baja y reducirla  alrededor del 4.5% a finales del año. Consecuentemente, se prevee una reducción de la TBP. Lo mismo se espera para el 2025, donde se proyecta que la tasa de política monetaria disminuya en 150 puntos básicos a finales de ese año, de acuerdo con con la OCDE.
+Las expectativas sobre las tasas de interés se encuentran principalemente sujetas a las evoluciones previstas de la inflación. Dado que, se prevé que la inflación se siga manteniendo por debajo de la meta objetivo establecida por el BCCR (3%) se espera que para el 2024 el Banco Central mantenga una política monetaria menos restrictiva y por ende, realice ajustes sobre la TPM para que tienda a la baja y reducirla  alrededor del 4.5% a finales del año. Consecuentemente, se prevé una reducción de la TBP. Lo mismo se espera para el 2025, donde se proyecta que la tasa de política monetaria disminuya en 150 puntos básicos a finales de ese año, de acuerdo con con la OCDE.
 
-Aunado a lo anterior, se ha estado ejerciciendo presión de parte del sector comercial para que el BCCR continue disminuyendo las tasas. Por lo que, se espera que para el 2024 el BCCR acate ante las solicitudes de este sector y a la vez, incentive una mayor actividad comercial, competitividad e inversiones. 
+Aunado a lo anterior, se ha estado ejerciendo presión de parte del sector comercial para que el BCCR continue disminuyendo las tasas. Por lo que, se espera que para el 2024 el BCCR acate ante las solicitudes de este sector y a la vez, incentive una mayor actividad comercial, competitividad e inversiones. 
 
-Tomando en cuenta la influencia del contexto internacional, se prevee para el 2024 una estabilización de la inflación internacional cerca de las metas de los bancos centrales incentivando a la disminución de las tasas de política monetaria. Por consiguiente,según el Banco Nacional, se considera que Estados Unidos suavice su política monetaria en el 2024, de tal manera, es posible que durante el año el BCCR  reduzca gradualmente la TPM y consigo la tasa básica pasiva. No obstante, aunque se esperan pocas presiones inflacionarias el BCCR enfrenta limitadas oportunidades para continuar disminuyendo la tasa de política monetaria. El motivo de esto son las altas tasas internacionales que ya han advertido las autoridades moneterias, las cuales pueden acotar los efectos de la política monetaria en una economía en crecimiento como la de Costa Rica.
+Tomando en cuenta la influencia del contexto internacional, se prevé para el 2024 una estabilización de la inflación internacional cerca de las metas de los bancos centrales incentivando la disminución de las tasas de política monetaria. Por consiguiente, según el Banco Nacional, se considera que Estados Unidos suavice su política monetaria en el 2024, de tal manera, es posible que durante el año el BCCR  reduzca gradualmente la TPM y consigo la tasa básica pasiva. No obstante, aunque se esperan pocas presiones inflacionarias el BCCR enfrenta limitadas oportunidades para continuar disminuyendo la tasa de política monetaria. El motivo de esto son las altas tasas internacionales que ya han advertido las autoridades moneterias, las cuales, pueden acotar los efectos de la política monetaria en una economía en crecimiento como la de Costa Rica.
 
 Además, de acuerdo con la opinión de economistas de la Universidad Nacional, el Banco Central mantiene bajas las tasas de interés como una estrategia para eludir la salida o entrada de dólares de la economía que afecten el tipo de cambio. Por lo tanto, ante una situación de aumento de las tasas internacionales, de la deuda externa y un exceso de dólares, se espera que para el 2024 el BCCR realice cambios moderados para ajustar la inflación en valores cercanos a la meta  establecida con el objetivo de encontrar estabilidad en los precios y las tasas. 
-
 
 
 # Producto Interno Bruto
@@ -178,13 +177,13 @@ ggplot(PIB, aes(x = Trimestre, y = `Tasa de Variación Interanual`)) +
 
 Tras la pandemia del COVID-19, en el 2022 la economía del mundo se comenzó a recuperar debido a las campañas de vacunación contra el virus y en consecuencia la eliminación de muchas de las restricciones sanitarias que impedían el desenvolvimiento económico. Esto se puede observar por medio del gráfico que muestra la evolución del PIB en donde para cada uno de los trimestres del año 2022 existe un crecimiento. 
 
-Al estudiar la variación del PIB entre el primer trimestre del 2021 y el primero del 2022 se obtiene la mayor variación interanual del PIB para el periodo de estudio con relación a la reapertura de la economía del país. Se puede notar que en los próximos trimestres del año las variaciones interanuales son positivas, no obstante, mucho menores que al inicio. 
+Al estudiar la variación del PIB entre el primer trimestre del 2021 y el primero del 2022, se obtiene la mayor variación interanual del PIB para el periodo de estudio con relación a la reapertura de la economía del país. Se puede notar que en los próximos trimestres del año las variaciones interanuales son positivas, no obstante, mucho menores que al inicio. 
 
-En el primer trimestre del 2023 se tuvo un decremento en el PIB, sin embargo, al analizar la variación interanual se afirma que este tuvo un crecimiento del 3,99%. El resto del año, al hablar de cantidades, se mantuvo en aumento, por otra parte, con lo que respecta al cambio del trimestre respectivo del año anterior este decrece durante todo el año. 
+En el primer trimestre del 2023 se tuvo un decremento en el PIB, sin embargo, al analizar la variación interanual se afirma que este tuvo un crecimiento del 3.99%. El resto del año, al hablar de cantidades, se mantuvo en aumento, por otra parte, con lo que respecta al cambio del trimestre respectivo del año anterior este decrece durante todo el año. 
 
-Es importante recalcar que según el informe de política monetaria publicado por el BCCR al calcular el PIB por medio de los componentes del gasto, se puede notar para el último  trimestre del 2023 que el resultado del mismo se debe particularmente a la acelaración del consumo privado atribuido al aumento en el ingreso real como se muestra en la sección de variación del salario mínimo, también el incremento en la inversión y una reducción de las exportaciones.
+Es importante recalcar que, según el informe de política monetaria publicado por el BCCR, al calcular el PIB por medio de los componentes del gasto, se puede notar para el último  trimestre del 2023 que el resultado del mismo se debe particularmente a la acelaración del consumo privado atribuido al aumento en el ingreso real como se muestra en la sección de variación del salario mínimo, también el incremento en la inversión y una reducción de las exportaciones.
 
-Además, se proyecta una desaceleración en el Producto Interno Bruto hasta alcanzar el 4% anual en el 2024 y 2025 en vista de que, exista una demanda interna que estimule la economía dada por la inversión y el consumo de los hogares costarricenses. Aunado a esto, el crecimiento de la demana externa se espera que continúe disminuyendo por causa de la desaceleración en la actividad económica de los principales socios comerciales del país. 
+Además, se proyecta una desaceleración en el Producto Interno Bruto hasta alcanzar el 4% anual en el 2024 y 2025 en vista de que, exista una demanda interna que estimule la economía dada por la inversión y el consumo de los hogares costarricenses. Aunado a esto, el crecimiento de la demanda externa se espera que continúe disminuyendo por causa de la desaceleración en la actividad económica de los principales socios comerciales del país. 
 
 # Variación de Salarios
 
@@ -226,13 +225,13 @@ ggplot(variaciones_largas, aes(x = Fecha, y = Variación, fill = Tipo)) +
   labs(caption = expression(bold("Fuente: ") * "Elaborado a partir de datos del BCCR."))
 ```
 
-Según el informe de la Organzación Mundial del Trabajo (OIT), entre enero y octubre del 2022 el salario mínimo real de Costa Rica en promedio se desvalorizó en un 4,7% ya que, como se puede observar en el gráfico anterior en donde se refleja que si bien las variaciones nominales muestran una estabilidad positiva y un aumento en julio del 2022, las variaciones reales son todo lo contrario pues, cada mes se da un aumento de manera negativa hasta en agosto de ese año donde empiezan a disminuir. 
+Según el informe de la Organzación Mundial del Trabajo (OIT), entre enero y octubre del 2022 el salario mínimo real de Costa Rica en promedio se desvalorizó en un 4.7% ya que, como se puede observar en el gráfico anterior en donde se refleja que si bien las variaciones nominales muestran una estabilidad positiva y un aumento en julio del 2022, las variaciones reales son todo lo contrario pues, cada mes se da un aumento de manera negativa hasta en agosto de ese año donde empiezan a disminuir. 
 
-Como se evidencia en el gráfico hasta enero del 2023 la variación real logra un valor positivo de 0,38%, a partir de ese momento mantuvo una tendencia a la alza hasta agosto del mismo año. Por otro lado, las variaciones nominales en el 2023 continuaron creciendo hasta julio en donde decrecen a 6,74%, un mes antes por primera vez durante el periodo de estudio las variaciones reales sobrepasan las nominales.  
+Como se evidencia en el gráfico, hasta enero del 2023 la variación real logra un valor positivo de 0.38%, a partir de ese momento mantuvo una tendencia a la alza hasta agosto del mismo año. Por otro lado, las variaciones nominales en el 2023 continuaron creciendo hasta julio en donde decrecen a 6.74%, un mes antes por primera vez durante el periodo de estudio las variaciones reales sobrepasan las nominales.  
 
-El informe indica que la tendencia a la baja del salario real en el 2022 se debe al aumento de la inflación para este periodo y como se analiza en el apartado correspondiente a esta variable por medio del gráfico se evidencia la clara relación inversa existente entre estas dos variables, justo en agosto de 2022 la inflación toma su valor más alto superando al 12%, misma fecha en la que el salario real toma su valor más bajo de -10,35%. Mientras que, para el 2023 la inflación sufre de una reducción importante llegando a una deflación, por consecuencia el salario real se recupera. 
+El informe indica que la tendencia a la baja del salario real en el 2022 se debe al aumento de la inflación para este periodo y como se analiza en el apartado correspondiente a esta variable, por medio del gráfico, se evidencia la clara relación inversa existente entre estas dos variables, justo en agosto de 2022 la inflación toma su valor más alto superando al 12%, misma fecha en la que el salario real toma su valor más bajo de -10.35%. Mientras que, para el 2023 la inflación sufre de una reducción importante llegando a una deflación, por consecuencia el salario real se recupera. 
 
-No obstante, es evidente que los salarios reales llegaron a caer en el 2022 incluso más que la inflación para el 2023 por lo que realmente los trabajadores, en especial los del sector público, no perciben mejores condiciones. Para el sector privado según el presidente del BCCR se tuvo una mejora del 8,7% con respecto a febrero del 2020 en los salarios promovido especialmente por los trabajadores de califiación baja y media.  
+No obstante, es evidente que los salarios reales llegaron a caer en el 2022 incluso más que la inflación para el 2023 por lo que realmente los trabajadores, en especial los del sector público, no perciben mejores condiciones. Para el sector privado, según el presidente del BCCR, se tuvo una mejora del 8.7% con respecto a febrero del 2020 en los salarios promovido especialmente por los trabajadores de calificación baja y media.  
 
 # Índices de Precios al Consumidor
 # Déficit fiscal
@@ -268,7 +267,7 @@ ggplot(TipoCambio1, aes(x = Fecha)) +
 
 En diciembre de 2022, el tipo de cambio cerró con una tasa de compra de $₡594/US\$$ y una tasa de venta de $₡601/US\$$. Estas cifras fueron notablemente más bajas en comparación con los niveles observados a lo largo del año, el cual estuvo caracterizado por una alta volatilidad en esta variable. Durante el año, el tipo de cambio experimentó una apreciación del 7%. Inicialmente, el tipo de cambio mostró una tendencia al alza en los primeros meses, alcanzando su punto más alto a mediados del año, sin embargo, experimentó un alto en el segundo semestre tras el anuncio por parte del Banco Central de Costa Rica (BCCR) de una serie de medidas destinadas a controlar esta tendencia. Como resultado, en el segundo semestre del año, el tipo de cambio comenzó a descender. Entre las medidas adoptadas por el BCCR para contrarrestar el alza en el tipo de cambio se encuentran la emisión de instrumentos financieros en dólares, la reducción del horario de negociación del MONEX y el otorgamiento de un préstamo de $1 000 millones al Fondo Latinoamérica de Reservas (FLAR) con el fin de fortalecer las reservas del país.
 
-Durante el 2023, el tipo de cambio en Costa Rica se promedió en ₡544,5/US$, alcanzando un nivel de precios que no se había visto desde el año 2016. Este valor incluso superó la cifra registrada hace 14 años, en 2009. Según análisis realizados, la devaluación de la moneda alcanzó el 12% a lo largo del año, con un promedio de compra del dólar de 542 colones y venta de 548 colones. Este exceso de oferta de dólares se atribuye principalmente al aumento en la llegada de turistas al país, que alcanzó los 2,75 millones de visitantes extranjeros hasta septiembre de 2023, según datos del Instituto Costarricense de Turismo, y al crecimiento en la Inversión Extranjera Directa (IED), que registró un incremento del 16% hasta septiembre del 2023, representando la llegada al país de 2.691 millones de dólares, según el Ministerio de Comercio Exterior. Ante la posibilidad de una baja más pronunciada en el valor del dólar, el Banco Central intervino en el mercado mediante la compra de divisas en Monex, con el fin de satisfacer la demanda del sector público no financiero y aumentar las reservas monetarias internacionales.
+Durante el 2023, el tipo de cambio en Costa Rica se promedió en $₡544,5/US$, alcanzando un nivel de precios que no se había visto desde el año 2016. Este valor incluso superó la cifra registrada hace 14 años, en 2009. Según análisis realizados, la devaluación de la moneda alcanzó el 12% a lo largo del año, con un promedio de compra del dólar de 542 colones y venta de 548 colones. Este exceso de oferta de dólares se atribuye principalmente al aumento en la llegada de turistas al país, que alcanzó los 2.75 millones de visitantes extranjeros hasta septiembre de 2023, según datos del Instituto Costarricense de Turismo, y al crecimiento en la Inversión Extranjera Directa (IED), que registró un incremento del 16% hasta septiembre del 2023, representando la llegada al país de 2.691 millones de dólares, según el Ministerio de Comercio Exterior. Ante la posibilidad de una baja más pronunciada en el valor del dólar, el Banco Central intervino en el mercado mediante la compra de divisas en Monex, con el fin de satisfacer la demanda del sector público no financiero y aumentar las reservas monetarias internacionales.
 
 Para el año 2024, los analistas financieros proyectan una intervención cambiaria más cautelosa por parte del Banco Central, limitada a situaciones de sobreoferta de dólares. La expectativa de una inflación del 2% sugiere una estabilidad en el tipo de cambio. No se prevén eventos en Costa Rica que puedan ejercer presiones significativas al alza sobre el tipo de cambio, lo que lleva a proyecciones de un tipo de cambio estable. Además, la próxima recepción de $1 mil millones en Eurobonos también se considera en estas previsiones.
 
